# nexus

./: .gitignore  NEXUS_VERIFIED_PLAN_v2.md  Nexus_Vision_Agent_Spec.md  README.md
.github/workflows/: ci.yml  deploy-web.yml
app/: .env.example  CLAUDE.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
app/nexus/: __init__.py  __main__.py  main.py
app/nexus/core/: __init__.py  ax_tree.py  config.py  exceptions.py  executor.py  memory.py  planner.py  screenshot.py  verifier.py  vision.py
app/nexus/ui/: __init__.py  dashboard.py  spotlight.py
app/nexus/utils/: __init__.py  notify.py  permissions.py
app/resources/: Info.plist
app/tests/: conftest.py  test_ax_tree.py  test_e2e.py  test_executor.py  test_memory.py  test_planner.py  test_verifier.py  test_vision.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/docs/: page.tsx
web/app/download/: page.tsx
web/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  SystemRequirements.tsx
