[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-agent"
version = "0.1.0"
description = "Local macOS AI automation agent — AX tree + vision + Claude"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["macos", "automation", "ai", "agent", "accessibility", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
]
dependencies = [
    "anthropic>=0.35.0",
    "ollama>=0.3.3",
    "pyautogui>=0.9.54",
    "PyQt6>=6.7.0",
    "pyobjc-framework-ApplicationServices>=10.3.1",
    "pyobjc-framework-Cocoa>=10.3.1",
    "pyobjc-framework-Quartz>=10.3.1",
    "pyobjc-framework-CoreGraphics>=10.3.1",
    "mss>=9.0.2",
    "Pillow>=10.4.0",
    "sqlalchemy>=2.0.35",
    "python-dotenv>=1.0.1",
    "pynput>=1.7.7",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
]
bundle = [
    "py2app>=0.28.8",
]

[project.scripts]
nexus = "nexus.main:main"

[project.urls]
Homepage = "https://github.com/nexus-ai/nexus"
Repository = "https://github.com/nexus-ai/nexus"
Issues = "https://github.com/nexus-ai/nexus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires real macOS apps to be open",
    "e2e: full end-to-end tests requiring all permissions, API key, and Ollama",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
